--- a/baitapb6them.html
+++ b/baitapb6them.html
@@ -18,6 +18,34 @@
     />
   </head>
   <body>
+
+
+    <br>
+    <br>
+    <br>
+    <div class="container">
+      <div class="row">
+        <div class="col-3">
+          <div class="card text-align-center">
+            <div class="card-header">Bài thêm tính số nguyên tố</div>
+            <div class="card-body">
+              <div class="form-group">
+               
+             <div class="form-group">
+                <label for="">Nhập số</label>
+                <input id="Sonb1" type="text" class="form-control" />
+              </div>
+             
+              <button id="submitb1" class="btn btn-success" onclick="tinhSoNguyenTo()"    >In ra số nguyên tố</button>
+            </div>
+            <div id="infonb1" class="card-footer text-muted"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <br>
+    <br>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
